fixing down arrow gap

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -47,7 +47,7 @@
         /* misc */
         --sidebar-gap: 25px;
         --socials-gap: 0.8rem;
-        --down-arrow-gap: 4rem;
+        --down-arrow-gap: 6rem;
         --proj-num-size: 1.5rem;
         --image-offset: 70px;
         --timeline-width: 2px;
